--- a/src/containers/skills/Skills.css
+++ b/src/containers/skills/Skills.css
@@ -1,6 +1,8 @@
 .skills-main-div {
   display: flex;
   overflow: hidden;
+  align-items: center;
+  max-height: 700px;
 }
 
 .skills-header {
@@ -27,7 +29,8 @@
 .skills-image-div > * {
   max-width: 100%;
   height: auto;
-  margin-top: 40px;
+  margin-top: 20px;
+  scale: 0.8;
 }
 
 .skills-heading {
