--- a/src/containers/contact/Contact.css
+++ b/src/containers/contact/Contact.css
@@ -22,7 +22,7 @@
 
 .contact-detail:hover,
 .contact-detail-email:hover {
-  color: black;
+  color: #ffffff;
   text-shadow: 2px 1px 2px #b5b5b5;
   transition: all 0.3s;
 }
