--- a/src/pages/EduEx/EducationComponent.css
+++ b/src/pages/EduEx/EducationComponent.css
@@ -76,7 +76,7 @@
   position: relative !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
-  color: white !important;
+  color: black;
 }
 
 .resume {
@@ -115,23 +115,25 @@
   font-weight: 700;
   padding-bottom: 30px;
   text-align: center;
+  color: var(--themeBlue);
 }
 
 .resume .resume-item {
   padding: 0 0 10px 25px;
   margin-top: -2px;
-  border-left: 2px solid #1179f7;
+  border-left: 2px solid var(--themeBlue);
   position: relative;
 }
 
 .resume .resume-item .resume-title {
+  border-radius: 5px;
   line-height: 18px;
   font-size: 0.9em;
-  background: #ffa500;
+  background: var(--themeOrange);
   padding: 8px 15px;
   display: inline-block;
   font-weight: 600;
-  color:black;
+  color:white;
   margin-bottom: 10px;
   margin-top: -2px;
 }
@@ -159,6 +161,6 @@
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #1179f7;
-  border: 2px solid #1179f7;
+  background: var(--themeBlue);
+  border: 2px solid var(--themeBlue);
 }
