- contacts updated - header updated - projects updated

--- a/src/App.css
+++ b/src/App.css
@@ -30,8 +30,8 @@
 }
 
 :root {
-  --themeBlue: #27c9d9;
-  --themeOrange: #811cef;
+  --themeBlue: #34caf8;
+  --themeOrange: #5D40FF;
 }
 
 /* Animations */
