--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -1,230 +1,299 @@
 .main {
-  width: 90%;
-  margin: 0px auto;
-  margin-top: 4rem;
+    width: 98%;
+    margin: 0px auto;
+    margin-top: 4rem;
 }
+
 .greet-main {
-  width: 90%;
-  padding: 20px 10px;
-  margin: 0px auto;
-  margin-top: 1rem;
+    width: 95%;
+    padding: 20px 10px;
+    margin: 0px auto;
+    margin-top: 1rem;
 }
 
 .gretting-main {
-  width: 90%;
-  padding: 20px 10px;
-  margin: 0px auto;
+    width: 95%;
+    padding: 20px 10px;
+    margin: 0px auto;
 }
 
 .greeting-main {
-  display: flex;
+    display: flex;
+}
+
+.greeting-text-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 5px
 }
 
 .greeting-main > * {
-  flex: 1;
-  margin-bottom: 30px;
+    flex: 1;
+    margin-bottom: 10px;
 }
+
 .button-greeting-div {
-  display: flex;
-  margin-top: 10px;
-  text-align: center;
+    display: flex;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.greeting-image-div {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+}
+
+.under {
+    /*position: absolute;*/
+    right: 0px;
+    top: 0px;
+    width: 43vw;
+    z-index: -1;
+    max-width: 100%;
+}
+
+.over {
+    position: absolute;
+    width: 28vw;
+    max-width: 600px;
+    /*height: 70%;*/
+    /*width: 70%;*/
+    /*left: 40px;*/
+    /*top: 10px;*/
+    z-index: 1;
+    border-radius: 300px;
 }
 
 .greeting-text {
-  margin-top: 0px;
-  font-size: 100px;
-  margin-bottom: 0px;
-  line-height: 1.1;
-  font-family: "Google Sans Regular";
+    margin-top: 0px;
+    font-size: 100px;
+    margin-bottom: 0px;
+    line-height: 1.1;
+    font-family: "Google Sans Regular";
 }
+
 .greeting-sub {
-  margin-top: 0px;
-  font-size: 50px;
-  margin-bottom: 50px;
-  line-height: 1.1;
-  font-family: "Google Sans Bold";
+    margin-top: 0px;
+    font-size: 50px;
+    margin-bottom: 50px;
+    line-height: 1.1;
+    font-family: "Google Sans Bold";
 }
+
 .greeting-typewriter {
-  margin-top: 0px;
-  font-size: 40px;
-  margin-bottom: 60px;
-  line-height: 0px;
-  font-family: "Google Sans Regular";
+    margin-top: 0px;
+    font-size: 40px;
+    margin-bottom: 60px;
+    line-height: 0px;
+    font-family: "Google Sans Regular";
 }
 
 .greeting-text-span {
-  font-size: 18px;
-  margin-top: 65px;
-  margin-right: 40px;
-  font-family: "Google Sans Medium";
+    font-size: 18px;
+    /*margin-top: 10px;*/
+    margin-bottom: 30px;
+    margin-right: 40px;
+    font-family: "Google Sans Medium";
 }
 
 .greeting-image-div > * {
-  max-width: 100%;
-  height: auto;
+
 }
 
 /* Media Query */
 @media (max-width: 1380px) {
-  .greeting-text {
-    font-size: 50px;
-  }
-  .greeting-text-span {
-    font-size: 20px;
-  }
+    .greeting-text {
+        font-size: 50px;
+    }
+
+    .greeting-text-span {
+        font-size: 20px;
+    }
+
+    .over {
+        /*position: absolute;*/
+        width: 30vw;
+    }
 }
+
 @media (max-width: 768px) {
-  .button-greeting-div {
-    justify-content: space-around;
-  }
-  .greeting-text {
-    font-size: 60px;
-    margin-top: 50px;
-  }
-  .greeting-sub {
-    margin-top: 10px;
-    font-size: 30px;
-    margin-bottom: 0px;
-    line-height: 1.1;
-    font-family: "Google Sans Bold";
-  }
-  .greeting-typewriter {
-    margin-top: 30px;
-    font-size: 30px;
-    margin-bottom: 100px;
-  }
-  .greeting-text-span {
-    font-size: 18px;
-    margin-right: 0px;
-  }
 
-  .greeting-main {
-    display: block;
-  }
+    .over {
+        /*position: absolute;*/
+        width: 60vw;
+    }
 
-  .portfolio-repo-btn-div {
-    width: 100%;
-    margin-top: 200px;
-    display: flex;
-    justify-content: center;
-  }
-  .button-greeting-div {
-    display: flex;
-    margin-top: 10px;
-  }
+    .under{
+        /*position: absolute;*/
+        width: 95vw;
+    }
+
+    .button-greeting-div {
+        justify-content: space-around;
+    }
+
+    .greeting-text {
+        font-size: 60px;
+        margin-top: 50px;
+    }
+
+    .greeting-sub {
+        margin-top: 10px;
+        font-size: 30px;
+        margin-bottom: 0px;
+        line-height: 1.1;
+        font-family: "Google Sans Bold";
+    }
+
+    .greeting-typewriter {
+        margin-top: 30px;
+        font-size: 30px;
+        margin-bottom: 100px;
+    }
+
+    .greeting-text-span {
+        font-size: 18px;
+        margin-right: 0px;
+    }
+
+    .greeting-main {
+        display: block;
+    }
+
+    .portfolio-repo-btn-div {
+        width: 100%;
+        margin-top: 200px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .button-greeting-div {
+        display: flex;
+        margin-top: 10px;
+    }
 }
+
 @media (max-width: 480px) {
-  .button-greeting-div {
-    justify-content: space-around;
-  }
-  .greeting-text {
-    font-size: 50px;
-    margin-top: -50px;
-  }
-  .greeting-sub {
-    margin-top: 10px;
-    font-size: 20px;
-    margin-bottom: 0px;
-    line-height: 1.1;
-    font-family: "Google Sans Bold";
-  }
+    .button-greeting-div {
+        justify-content: space-around;
+    }
 
-  .greeting-typewriter {
-    margin-top: 20px;
-    font-size: 25px;
-    margin-bottom: 40px;
-  }
-  .greeting-text-span {
-    font-size: 15px;
-    margin-right: 0px;
-    line-height: normal;
-    margin-bottom: 0px;
-  }
-  .greeting-main {
-    display: block;
-  }
+    .greeting-text {
+        font-size: 50px;
+        margin-top: -50px;
+    }
 
-  .button-greeting-div {
-    display: flex;
-    margin-top: -10px;
-    text-align: center;
-  }
+    .greeting-sub {
+        margin-top: 10px;
+        font-size: 20px;
+        margin-bottom: 0px;
+        line-height: 1.1;
+        font-family: "Google Sans Bold";
+    }
+
+    .greeting-typewriter {
+        margin-top: 20px;
+        font-size: 25px;
+        margin-bottom: 40px;
+    }
+
+    .greeting-text-span {
+        font-size: 15px;
+        margin-right: 0px;
+        line-height: normal;
+        margin-bottom: 0px;
+    }
+
+    .greeting-main {
+        display: block;
+    }
+
+    .button-greeting-div {
+        display: flex;
+        margin-top: -10px;
+        text-align: center;
+    }
 }
 
 .entities {
-  line-height: 2;
+    line-height: 2;
 }
 
 [data-entity] {
-  padding: 0.25em 0.35em;
-  margin: 0px 0.25em;
-  line-height: 1;
-  display: inline-block;
-  border-radius: 0.25em;
-  border: 1px solid;
+    padding: 0.25em 0.35em;
+    margin: 0px 0.25em;
+    line-height: 1;
+    display: inline-block;
+    border-radius: 0.25em;
+    border: 1px solid;
 }
 
 [data-entity]::after {
-  box-sizing: border-box;
-  content: attr(data-entity);
-  font-size: 0.6em;
-  line-height: 1;
-  padding: 0.35em;
-  border-radius: 0.35em;
-  text-transform: uppercase;
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0px 0px 0.1rem 0.5rem;
+    box-sizing: border-box;
+    content: attr(data-entity);
+    font-size: 0.6em;
+    line-height: 1;
+    padding: 0.35em;
+    border-radius: 0.35em;
+    text-transform: uppercase;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px 0px 0.1rem 0.5rem;
 }
 
 [data-entity][data-entity="noun"] {
-  background: rgba(166, 226, 45, 0.2);
-  border-color: rgb(166, 226, 45);
-  color: rgb(63, 59, 59);
+    background: rgba(166, 226, 45, 0.2);
+    border-color: rgb(166, 226, 45);
+    color: rgb(63, 59, 59);
 }
+
 [data-entity][data-entity="noun"]::after {
-  background: rgb(166, 226, 45);
-  color: rgb(0, 0, 0);
+    background: rgb(166, 226, 45);
+    color: rgb(0, 0, 0);
 }
 
 [data-entity][data-entity="person"] {
-  background: rgba(45, 226, 217, 0);
-  border-color: rgb(45, 226, 141);
-  color: rgb(0, 0, 0);
+    background: rgba(45, 226, 217, 0);
+    border-color: rgb(45, 226, 141);
+    color: rgb(0, 0, 0);
 }
 
 [data-entity][data-entity="person"]::after {
-  background: rgb(45, 226, 141);
-  color: rgb(0, 0, 0);
+    background: rgb(45, 226, 141);
+    color: rgb(0, 0, 0);
 }
 
 [data-entity][data-entity="skill"] {
-  background: rgb(187, 47, 117, 0.2);
-  border-color: rgb(187, 47, 117);
-  color: rgb(63, 59, 59);
+    background: rgb(187, 47, 117, 0.2);
+    border-color: rgb(187, 47, 117);
+    color: rgb(63, 59, 59);
 }
 
 [data-entity][data-entity="skill"]::after {
-  background: rgb(187, 47, 117);
+    background: rgb(187, 47, 117);
 }
 
 [data-entity][data-entity="freelance"] {
-  background: rgb(187, 161, 47, 0.2);
-  border-color: rgb(187, 161, 47);
-  color: rgb(255, 255, 255);
+    background: rgb(187, 161, 47, 0.2);
+    border-color: rgb(187, 161, 47);
+    color: rgb(255, 255, 255);
 }
 
 [data-entity][data-entity="freelance"]::after {
-  background: rgb(187, 161, 47);
-  color: rgb(0, 0, 0);
+    background: rgb(187, 161, 47);
+    color: rgb(0, 0, 0);
 }
 
 [data-entity][data-entity="verb"] {
-  background: rgba(53, 215, 196, 0.2);
-  border-color: rgb(47, 187, 171);
-  color: rgb(63, 59, 59);
+    background: rgba(53, 215, 196, 0.2);
+    border-color: rgb(47, 187, 171);
+    color: rgb(63, 59, 59);
 }
 
 [data-entity][data-entity="verb"]::after {
-  background: rgb(53, 215, 196);
+    background: rgb(53, 215, 196);
 }
