--- a/src/pages/contact/ContactComponent.css
+++ b/src/pages/contact/ContactComponent.css
@@ -1,5 +1,5 @@
 .contact-main {
-  width: 100%;
+  width: 98%;
 }
 
 .basic-contact {
@@ -17,6 +17,7 @@
 
 .address-heading-div {
   display: flex;
+  align-items: center;
 }
 
 .blog-heading-div > * {
