--- a/src/pages/projects/Projects.css
+++ b/src/pages/projects/Projects.css
@@ -16,7 +16,7 @@
   position: relative !important;
   padding-top: 150px !important;
   padding-bottom: 30px !important;
-  background-image: var(--section-background-color) !important;
+  /*background-image: var(--section-background-color) !important;*/
 }
 
 .project-card {
@@ -24,7 +24,7 @@
   padding-bottom: 50px !important;
   padding-left: 25px !important;
   padding-right: 25px !important;
-  height: auto !important;
+  /*height: auto !important;*/
 }
 
 .button-links-div {
@@ -36,14 +36,19 @@
 .card {
   position: relative;
   display: -ms-flexbox;
+  align-items: center;
   display: flex;
   -ms-flex-direction: column;
   flex-direction: column;
   min-width: 0;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   word-wrap: break-word;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   background-clip: border-box;
+  border-style: solid;
+  border-color: lightgray;
+  border-radius: 5px;
+  box-shadow: 10px 10px 5px lightgray;
 }
 
 .card > hr {
@@ -140,7 +145,13 @@
 }
 
 .card-img-top {
-  width: 100%;
+  width: fit-content;
+  max-width: 90%;
+  display: flex;
+  justify-content: center;
+  /*height: 200px;*/
+  padding: 5px;
+  max-height: 150px;
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
 }
@@ -269,7 +280,10 @@
 }
 
 .projects-heading-div > * {
-  flex: 1;
+  max-width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .projects-heading-img-div {
@@ -340,8 +354,13 @@
     font-size: 20px;
   }
 
+  .projects-heading-div > * {
+    max-width: 100%;
+  }
+
   .projects-heading-div {
     flex-direction: column;
+    align-items: center;
   }
 
   .projects-header-detail-text {
