--- a/src/containers/skills/Skills.css
+++ b/src/containers/skills/Skills.css
@@ -2,7 +2,14 @@
   display: flex;
   overflow: hidden;
   align-items: center;
-  max-height: 700px;
+}
+
+.skills-main-div:nth-child(odd) {
+  flex-direction: row-reverse;
+}
+
+.skills-main-div:nth-child(even) {
+  flex-direction: row;
 }
 
 .skills-header {
@@ -64,9 +71,6 @@
     font-size: 16px;
     line-height: normal;
   }
-  .skills-main-div {
-    flex-direction: column;
-  }
   .skills-text-div {
     margin-left: 0px;
     margin: 20px;
@@ -84,5 +88,13 @@
   }
   .skills-image-div > * {
     margin-top: 0px;
+  }
+
+  .skills-main-div:nth-child(odd) {
+    flex-direction: column;
+  }
+
+  .skills-main-div:nth-child(even) {
+    flex-direction: column;
   }
 }
