--- a/src/components/competitiveSites/CompetitiveSites.css
+++ b/src/components/competitiveSites/CompetitiveSites.css
@@ -9,6 +9,7 @@
 .competitive-sites-inline {
   display: inline-block;
   margin-right: 20px;
+  margin-top:10px;
   margin-bottom: 20px;
   font-family: "Google Sans Regular";
 }
