--- a/src/pages/EduEx/EducationComponent.css
+++ b/src/pages/EduEx/EducationComponent.css
@@ -49,6 +49,7 @@
   font-size: 30px;
   font-family: "Google Sans Regular";
   text-align: center;
+  margin-bottom: 40px;
 }
 
 @media (max-width: 1380px) {
