--- a/src/components/softwareSkills/SoftwareSkill.css
+++ b/src/components/softwareSkills/SoftwareSkill.css
@@ -1,9 +1,9 @@
 .dev-icons {
-  padding-left: 0;
   list-style: none;
   font-size: 3rem;
   margin-bottom: 0px;
   margin-top: 0px;
+  padding-left: 5px;
 }
 
 .software-skill-inline {
