--- a/src/pages/EduEx/EducationComponent.css
+++ b/src/pages/EduEx/EducationComponent.css
@@ -127,7 +127,9 @@
 .resume .resume-title {
   font-size: 30px;
   line-height: 1.1;
+
   font-family: "Google Sans Regular";
+  text-decoration: underline;
   /*font-weight: 700;*/
   /*padding-bottom: 30px;*/
   text-align: center;
@@ -151,6 +153,7 @@
   color:black;
   margin-bottom: 10px;
   margin-top: -2px;
+  text-decoration: none;
 }
 
 
