--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -66,6 +66,9 @@
     position: absolute;
     width: 28vw;
     max-width: 600px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    object-position: 30% 70%;
     /*height: 70%;*/
     /*width: 70%;*/
     /*left: 40px;*/
